objects/Partner_Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Contact Roles</relationshipLabel>
        <relationshipName>Partner_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Contact Roles</relationshipLabel>
        <relationshipName>Partner_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <label>Influence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Economic Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer</fullName>
                </value>
                <value>
                    <fullName>Technical Buyer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>RVP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Contact Role</label>
    <nameField>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Partner Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>